# AIArena

./: .gitignore  main.py  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: agents.py
backend/app/agents/connect4/: dummy.py  minimax_agent.py  user_agent.py  validator.py
backend/app/api/routes/: routes_agent.py  routes_connect4.py  routes_dummy_agent.py  routes_leaderboard.py  routes_minimax_agent.py
backend/app/core/: run_battle.py  scheduler.py
backend/app/db/: db.py
backend/app/games/: connect4.py
backend/app/services/: game_controller.py
backend/app/tanks/: arena.py  models.py  physics.py  router.py  session.py
backend/app/turn_based/agents/connect4/: dummy.py  minimax_agent.py
backend/app/turn_based/games/: connect4.py  game.py
backend/app/turn_based/services/: game_controller.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: c4_agent.ts  c4_dummy_agent.ts  c4_minimax_agent.ts  connect4.ts  leaderboard.ts  tanks.ts
frontend/src/components/: ChallengeModal.tsx  Connect4Board.tsx  Leaderboard.tsx  TankCanvas.tsx
frontend/src/hooks/: useTankInput.ts  useTanksSocket.ts
frontend/src/pages/: ChallengePage.tsx  Home.tsx  TankPage.tsx
