[project]
name = "aiarena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "motor>=3.6.0",
    "pymongo[srv]>=4.9",
    "uvicorn>=0.41.0",
    "websocat>=1.13.0",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
